@@ -12,6 +12,7 @@
 override_dh_install:
 	dh_install gopath/src/launchpad.net/hockeypuck/cmd/hockeypuck-mgo/hockeypuck-mgo /usr/bin/
 	dh_install gopath/src/launchpad.net/hockeypuck/cmd/hockeypuck-load/hockeypuck-load /usr/bin/
+	dh_install www /var/lib/hockeypuck/www
 	dh_install man/man1/hockeypuck-mgo.1 /usr/share/man/man1
 
 %:
