@@ -1,0 +1,8 @@
+{{define "page_footer"}}
+<div id="footer">
+<p id="copyright">Hockeypuck - OpenPGP key server - Copyright (C) 2012 - Casey Marshall</p>
+<p id="copyleft">This program is free software: you can redistribute it and/or modify
+  it under the terms of the GNU Affero General Public License as published by
+  the Free Software Foundation, version 3.</p>
+</div>
+{{end}}
