@@ -1,0 +1,3 @@
+{{define "head"}}
+<link rel="stylesheet" href="/css/reset.css" />
+{{end}}
