@@ -1,0 +1,11 @@
+{{define "page_header"}}
+<div id="header">
+<h1>Hockeypuck</h1>
+<p>Public key directory</p>
+<ul id="topmenu">
+	<li><a href="/">Search OpenPGP</a></li>
+	<li><a href="https://launchpad.net/hockeypuck">Project Home</a></li>
+	<li>About</li>
+</ul>
+</div>
+{{end}}
