@@ -1,0 +1,10 @@
+{{define "title"}}Hockeypuck | Search OpenPGP Public Keys{{end}}
+
+{{define "page_content"}}
+<h2>OpenPGP Search</h2>
+<form method="post">
+	<input name="search" type="search"></input>
+	<input id="search_submit" formaction="/pks/lookup?op=index" type="submit" value="Public Key Search"></input>
+	<input id="get_submit" formaction="/pks/lookup?op=get" type="submit" value="I'm Feeling Lucky"></input>
+</form>
+{{end}}
