@@ -1,0 +1,25 @@
+{{define "top"}}
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>{{template "title"}}</title>
+{{template "head"}}
+</head>
+<body>
+{{template "page_header"}}
+<div id="main">
+{{end}}
+
+{{define "bottom"}}
+</div>
+{{template "page_footer"}}
+</body>
+</html>
+{{end}}
+
+{{define "layout"}}
+{{template "top"}}
+{{template "page_content"}}
+{{template "bottom"}}
+{{end}}
